--- a/crates/wasm2trvm/Cargo.toml
+++ b/crates/wasm2trvm/Cargo.toml
@@ -13,6 +13,8 @@ categories.workspace = true
 [dependencies]
 wasmparser = { version = "0.92", features = ["deterministic"] }
 triton-vm = { path = "../../../triton-vm/triton-vm" }
+derive_more = "0.99"
+thiserror = "1.0"
 
 [dev-dependencies]
 wat = "1"
