--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/wasm2trvm"]
+members = ["crates/wasm2zk-tritonvm"]
 exclude = []
 resolver = "2"
 
@@ -7,7 +7,7 @@ resolver = "2"
 authors = [
     "Denys Zadorozhny <denys@zadorozhnyi.com>"
 ]
-repository = "https://github.com/greenhat/wasmproof"
+repository = "https://github.com/greenhat/wasm2zk"
 edition = "2021"
 readme = "README.md"
 license = "Apache-2.0"
