--- a/crates/wasm2zk-tritonvm/Cargo.toml
+++ b/crates/wasm2zk-tritonvm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "wasm2trvm"
+name = "wasm2zk-tritonvm"
 version = "0.1.0"
-description = "WebAssembly to Triton VM compiler"
+description = "Triton VM backend for wasm2zk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -17,7 +17,3 @@ derive_more = "0.99"
 thiserror = "1.0"
 
 [dev-dependencies]
-wat = "1"
-wast = "47.0"
-assert_matches = "1.5"
-anyhow = "1.0"
