--- a/crates/wasm2zk-wasmparser/Cargo.toml
+++ b/crates/wasm2zk-wasmparser/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "wasm2zk-tritonvm"
+name = "wasm2zk-wasmparser"
 version = "0.1.0"
-description = "Triton VM backend for wasm2zk"
+description = "Wasm parser for wasm2zk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,7 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-triton-vm = { path = "../../../triton-vm/triton-vm" }
+wasmparser = { version = "0.92", features = ["deterministic"] }
 derive_more = "0.99"
 thiserror = "1.0"
 
