--- a/crates/ir/Cargo.toml
+++ b/crates/ir/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "wasm2zk-wasmparser"
+name = "c2zk-ir"
 version = "0.1.0"
-description = "Wasm parser for wasm2zk"
+description = "IR for c2zk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,8 +11,5 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-wasmparser = { version = "0.92", features = ["deterministic"] }
-derive_more = "0.99"
-thiserror = "1.0"
 
 [dev-dependencies]
