--- a/crates/tritonvm/Cargo.toml
+++ b/crates/tritonvm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "wasm2zk-tritonvm"
+name = "c2zk-tritonvm"
 version = "0.1.0"
-description = "Triton VM backend for wasm2zk"
+description = "Triton VM backend for c2zk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -12,7 +12,5 @@ categories.workspace = true
 
 [dependencies]
 triton-vm = { path = "../../../triton-vm/triton-vm" }
-derive_more = "0.99"
-thiserror = "1.0"
 
 [dev-dependencies]
