--- a/crates/codegen/Cargo.toml
+++ b/crates/codegen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-tritonvm"
+name = "c2zk-codegen"
 version = "0.1.0"
-description = "Triton VM backend for c2zk"
+description = "codegen for c2zk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,6 +11,6 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-triton-vm = { path = "../../../triton-vm/triton-vm" }
+c2zk-codegen-shared = { workspace = true }
 
 [dev-dependencies]
