--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -12,9 +12,12 @@ categories.workspace = true
 
 [dependencies]
 c2zk-codegen = { workspace = true }
+c2zk-codegen-shared = { workspace = true }
 c2zk-frontend = { workspace = true }
+c2zk-frontend-shared = { workspace = true }
 c2zk-ir = { workspace = true }
 c2zk-wasm = { workspace = true }
+derive_more = { workspace = true }
 
 [dev-dependencies]
 wat = { workspace = true }
