--- a/crates/frontend-shared/Cargo.toml
+++ b/crates/frontend-shared/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-frontend"
+name = "c2zk-frontend-shared"
 version = "0.1.0"
-description = "Frontend for c2zk"
+description = "IR builder helper for c2zk"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -12,8 +12,5 @@ categories.workspace = true
 
 [dependencies]
 c2zk-ir = { workspace = true }
-c2zk-wasm = { workspace = true }
-c2zk-frontend-shared = { workspace = true }
-derive_more = { workspace = true }
 
 [dev-dependencies]
