call start function instead of inlining it;
move compile_* functions for TritonVM to codegen module;

--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -17,3 +17,6 @@ triton-vm = { path = "../../../triton-vm/triton-vm" }
 twenty-first = { version = "0.5.0" }
 
 [dev-dependencies]
+c2zk-frontend = { workspace = true }
+wat = { workspace = true }
+expect-test = "1.0.1"
