--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -19,4 +19,5 @@ twenty-first = { version = "0.5.0" }
 [dev-dependencies]
 c2zk-frontend = { workspace = true }
 wat = { workspace = true }
+wasmprinter = { workspace = true }
 expect-test = "1.0.1"
