Wasm to IR type conversion;

--- a/crates/frontend-shared/Cargo.toml
+++ b/crates/frontend-shared/Cargo.toml
@@ -12,5 +12,6 @@ categories.workspace = true
 
 [dependencies]
 c2zk-ir = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
