add rust-wasm-test/bundle1 crate;

--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -18,6 +18,7 @@ twenty-first = { version = "0.5.0" }
 
 [dev-dependencies]
 c2zk-frontend = { workspace = true }
+c2zk-frontend-shared = { workspace = true, features = ["rust-wasm-tests"] }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
 expect-test = "1.0.1"
