--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,15 @@
 [workspace]
-members = ["crates/wasm", "crates/codegen-tritonvm", "crates/ir", "crates/frontend", "crates/codegen", "crates/codegen-shared", "crates/compiler", "crates/stdlib"]
+members = [
+  "crates/wasm",
+  "crates/codegen-tritonvm",
+  "crates/ir",
+  "crates/frontend",
+  "crates/codegen",
+  "crates/codegen-shared",
+  "crates/compiler",
+  "crates/stdlib",
+  "crates/rust-wasm-tests/bundle1"
+]
 exclude = []
 resolver = "2"
 
@@ -22,6 +32,8 @@ c2zk-frontend-shared = { path = "crates/frontend-shared" }
 c2zk-codegen = { path = "crates/codegen" }
 c2zk-codegen-shared = { path = "crates/codegen-shared" }
 c2zk-codegen-tritonvm = { path = "crates/codegen-tritonvm" }
+c2zk-stdlib = { path = "crates/stdlib" }
+c2zk-rust-wasm-tests-bundle1 = { path = "crates/rust-wasm-tests/bundle1" }
 wasmparser = { version = "0.94", features = ["deterministic"] }
 log = { version = "0.4.8", default-features = false }
 smallvec = { version = "1.6.1", features = ["union"] }
