--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,5 @@ wasmprinter = "0.2"
 target-lexicon = { version = "0.12.3", default-features = false }
 derive_more = "0.99"
 thiserror = "1.0"
+lazy_static = "1.4.0"
+spin = "0.9.4"
