--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -18,7 +18,8 @@ twenty-first = { version = "0.5.0" }
 
 [dev-dependencies]
 c2zk-frontend = { workspace = true }
-c2zk-frontend-shared = { workspace = true, features = ["rust-wasm-tests"] }
+c2zk-rust-wasm-tests-helper = { workspace = true }
+c2zk-rust-wasm-tests-bundle1 = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
 expect-test = "1.0.1"
