--- a/crates/rust-wasm-tests-helper/Cargo.toml
+++ b/crates/rust-wasm-tests-helper/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-frontend-shared"
+name = "c2zk-rust-wasm-tests-helper"
 version = "0.1.0"
-description = "IR builder helper for c2zk"
+description = "Helper types, functions for Rust-to-Wasm tests"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,8 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-c2zk-ir = { workspace = true }
-thiserror = { workspace = true }
 c2zk-stdlib = { workspace = true }
+c2zk-rust-wasm-tests-bundle1 = { workspace = true }
 
 [dev-dependencies]
