--- a/crates/rust-wasm-tests/bundle1-bin/Cargo.toml
+++ b/crates/rust-wasm-tests/bundle1-bin/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-c2zk-stdlib = { path = "../../stdlib" }
+c2zk-stdlib = { path = "../../stdlib", features = [] }
 c2zk-rust-wasm-tests-bundle1 = { path = "../bundle1" }
 
