--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -12,6 +12,7 @@ categories.workspace = true
 
 [dependencies]
 c2zk-ir = { workspace = true }
+c2zk-ir-transform = { workspace = true }
 c2zk-codegen-shared = { workspace = true }
 triton-vm = { path = "../../../triton-vm/triton-vm" }
 twenty-first = { version = "0.5.0" }
