update tritonvm crates;

--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -14,8 +14,11 @@ categories.workspace = true
 c2zk-ir = { workspace = true }
 c2zk-ir-transform = { workspace = true }
 c2zk-codegen-shared = { workspace = true }
-triton-vm = { path = "../../../triton-vm/triton-vm" }
-twenty-first = { version = "0.5.0" }
+# triton-vm = { path = "../../../triton-vm/triton-vm" }
+# triton-opcodes = { path = "../../../triton-vm/triton-opcodes" }
+triton-vm = { version = "0.11" }
+triton-opcodes = { version = "0.11" }
+twenty-first = { version = "0.10" }
 
 [dev-dependencies]
 c2zk-frontend = { workspace = true }
