WIP adding signature to Func;

--- a/crates/ir-transform/Cargo.toml
+++ b/crates/ir-transform/Cargo.toml
@@ -12,6 +12,7 @@ categories.workspace = true
 
 [dependencies]
 c2zk-ir = { workspace = true }
+c2zk-frontend-shared = { workspace = true }
 derive_more = { workspace = true }
 
 [dev-dependencies]
