generate loop epilogue after func call according
to "previous" level block type;

--- a/crates/ir-transform/Cargo.toml
+++ b/crates/ir-transform/Cargo.toml
@@ -14,5 +14,6 @@ categories.workspace = true
 c2zk-ir = { workspace = true }
 c2zk-frontend-shared = { workspace = true }
 derive_more = { workspace = true }
+itertools = { workspace = true }
 
 [dev-dependencies]
