update wasmparser to 0.102;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ c2zk-codegen-tritonvm = { path = "crates/codegen-tritonvm" }
 c2zk-stdlib = { path = "crates/stdlib" }
 c2zk-rust-wasm-tests-bundle1 = { path = "crates/rust-wasm-tests/bundle1" }
 c2zk-rust-wasm-tests-helper = { path = "crates/rust-wasm-tests-helper" }
-wasmparser = { version = "0.94", features = ["deterministic"] }
+wasmparser = { version = "0.102" }
 log = { version = "0.4.8", default-features = false }
 smallvec = { version = "1.6.1", features = ["union"] }
 wat = "1.0.49"
