scaffolding for Miden VM codegen (copied from TritonVM);

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "crates/wasm",
   "crates/codegen-tritonvm",
+  "crates/codegen-midenvm",
   "crates/ir",
   "crates/ir-transform",
   "crates/frontend",
