--- a/crates/codegen-midenvm/Cargo.toml
+++ b/crates/codegen-midenvm/Cargo.toml
@@ -15,6 +15,7 @@ c2zk-ir = { workspace = true }
 c2zk-ir-transform = { workspace = true }
 c2zk-codegen-shared = { workspace = true }
 miden-assembly = "0.5"
+derive_more = { workspace = true }
 
 [dev-dependencies]
 c2zk-frontend = { workspace = true }
