--- a/crates/ir/Cargo.toml
+++ b/crates/ir/Cargo.toml
@@ -15,5 +15,6 @@ derive_more = { workspace = true }
 indexmap = { workspace = true }
 thiserror = { workspace = true }
 topological-sort = { workspace = true }
+pliron = { git = "https://github.com/greenhat/pliron" , rev = "56d39b8d1dc780d42dd03ae5e22bd3839843057c" }
 
 [dev-dependencies]
