add wasm dialect with ConstOp and AddOp;
remove results from ozk ConstantOp;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "crates/codegen-midenvm",
   "crates/ir",
   "crates/dialects/ozk",
+  "crates/dialects/wasm",
   "crates/ir-transform",
   "crates/frontend",
   "crates/codegen",
