--- a/crates/dialects/wasm/Cargo.toml
+++ b/crates/dialects/wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ozk-ozk-dialect"
+name = "ozk-wasm-dialect"
 version = "0.1.0"
-description = "Builtin dialect for OmniZK"
+description = "Wasm dialect(IR) for OmniZK"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -17,6 +17,5 @@ pliron = { git = "https://github.com/greenhat/pliron" , rev = "56d39b8d1dc780d42
 intertrait = "0.2.2"
 # Required by intertrait
 linkme = "0.2"
-winter-math = { version = "0.6", default-features = false }
 
 [dev-dependencies]
