--- a/crates/frontend-wasm/Cargo.toml
+++ b/crates/frontend-wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ozk-ozk-dialect"
+name = "ozk-frontend-wasm"
 version = "0.1.0"
-description = "Builtin dialect for OmniZK"
+description = "Wasm dialect builder for OmniZK"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,12 +11,11 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-derive_more = { workspace = true }
-thiserror = { workspace = true }
+ozk-wasm-dialect = { workspace = true }
 pliron = { workspace = true }
-intertrait = "0.2.2"
-# Required by intertrait
-linkme = "0.2"
-winter-math = { version = "0.6", default-features = false }
+thiserror = { workspace = true }
+c2zk-stdlib = { workspace = true }
+wasmparser = { workspace = true }
+derive_more = { workspace = true }
 
 [dev-dependencies]
