--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -12,7 +12,7 @@ categories.workspace = true
 
 [dependencies]
 c2zk-ir = { workspace = true }
-c2zk-wasm = { workspace = true }
+ozk-frontend-wasm = { workspace = true }
 c2zk-frontend-shared = { workspace = true }
 derive_more = { workspace = true }
 
