--- a/crates/dialects/wasm/Cargo.toml
+++ b/crates/dialects/wasm/Cargo.toml
@@ -13,9 +13,10 @@ categories.workspace = true
 [dependencies]
 derive_more = { workspace = true }
 thiserror = { workspace = true }
-pliron = { git = "https://github.com/greenhat/pliron" , rev = "56d39b8d1dc780d42dd03ae5e22bd3839843057c" }
+pliron = { workspace = true }
 intertrait = "0.2.2"
 # Required by intertrait
 linkme = "0.2"
+indent = "0.1.1"
 
 [dev-dependencies]
