adapt module_translator to new mod_builder and func_builder;
use Ptr<TypeObj> instead of FunctionType;

--- a/crates/frontend-wasm/Cargo.toml
+++ b/crates/frontend-wasm/Cargo.toml
@@ -17,5 +17,6 @@ thiserror = { workspace = true }
 c2zk-stdlib = { workspace = true }
 wasmparser = { workspace = true }
 derive_more = { workspace = true }
+log = { workspace = true }
 
 [dev-dependencies]
