--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions-rs/toolchain@v1
+        with:
+          target: "wasm32-unknown-unknown"
       - name: cargo fetch
         uses: actions-rs/cargo@v1
         with:
