--- a/crates/ir-transform/Cargo.toml
+++ b/crates/ir-transform/Cargo.toml
@@ -12,7 +12,8 @@ categories.workspace = true
 
 [dependencies]
 c2zk-ir = { workspace = true }
-# c2zk-frontend-shared = { workspace = true }
+c2zk-frontend-shared = { workspace = true }
+ozk-ozk-dialect = { workspace = true }
 derive_more = { workspace = true }
 itertools = { workspace = true }
 
