--- a/crates/codegen-midenvm/Cargo.toml
+++ b/crates/codegen-midenvm/Cargo.toml
@@ -14,6 +14,7 @@ categories.workspace = true
 c2zk-ir = { workspace = true }
 c2zk-ir-transform = { workspace = true }
 c2zk-codegen-shared = { workspace = true }
+ozk-ozk-dialect = { workspace = true }
 miden-assembly = "0.5"
 miden-stdlib = "0.4"
 miden-processor = "0.5"
@@ -26,6 +27,7 @@ c2zk-frontend = { workspace = true }
 ozk-frontend-wasm = { workspace = true }
 c2zk-rust-wasm-tests-helper = { workspace = true }
 c2zk-rust-wasm-tests-bundle1 = { workspace = true }
+ozk-wasm-dialect = { workspace = true }
 pliron = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
