--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "crates/ir",
   "crates/dialects/ozk",
   "crates/dialects/wasm",
+  "crates/dialects/miden",
   "crates/ir-transform",
   "crates/frontend",
   "crates/frontend-shared",
@@ -31,6 +32,7 @@ categories = ["wasm", "no-std", "virtualization"]
 [workspace.dependencies]
 ozk-ozk-dialect = { path = "crates/dialects/ozk" }
 ozk-wasm-dialect = { path = "crates/dialects/wasm" }
+ozk_miden-dialect = { path = "crates/dialects/miden" }
 c2zk-ir = { path = "crates/ir" }
 c2zk-ir-transform = { path = "crates/ir-transform" }
 c2zk-frontend = { path = "crates/frontend" }
@@ -63,3 +65,4 @@ intertrait = "0.2.2"
 # Required by intertrait
 linkme = "0.2"
 indent = "0.1.1"
+once_cell = "1.15.0"
