--- a/crates/ir-transform/Cargo.toml
+++ b/crates/ir-transform/Cargo.toml
@@ -14,7 +14,13 @@ categories.workspace = true
 c2zk-ir = { workspace = true }
 c2zk-frontend-shared = { workspace = true }
 ozk-ozk-dialect = { workspace = true }
+ozk-wasm-dialect = { workspace = true }
+ozk-miden-dialect = { workspace = true }
+pliron = { workspace = true }
 derive_more = { workspace = true }
 itertools = { workspace = true }
+anyhow = { workspace = true }
+apint = "0.2.0"
+winter-math = { version = "0.6", default-features = false }
 
 [dev-dependencies]
