--- a/crates/codegen-tritonvm/Cargo.toml
+++ b/crates/codegen-tritonvm/Cargo.toml
@@ -14,6 +14,8 @@ categories.workspace = true
 c2zk-ir = { workspace = true }
 c2zk-ir-transform = { workspace = true }
 c2zk-codegen-shared = { workspace = true }
+ozk-wasm-dialect = { workspace = true }
+pliron = { workspace = true }
 # triton-vm = { path = "../../../triton-vm/triton-vm" }
 # triton-opcodes = { path = "../../../triton-vm/triton-opcodes" }
 triton-vm = { version = "0.19" }
