--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "c2zk-compiler"
+name = "ozk-compiler"
 version = "0.1.0"
-description = "compiler for c2zk"
+description = "compiler for OmniZK"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -19,5 +19,6 @@ c2zk-ir = { workspace = true }
 ozk-frontend-wasm = { workspace = true }
 pliron = { workspace = true }
 derive_more = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
