--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -17,5 +17,6 @@ ozk-wasm-dialect = { workspace = true }
 c2zk-frontend-shared = { workspace = true }
 pliron = { workspace = true }
 derive_more = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
