--- a/crates/dialects/valida/Cargo.toml
+++ b/crates/dialects/valida/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ozk-ozk-dialect"
+name = "ozk-valida-dialect"
 version = "0.1.0"
-description = "Builtin dialect for OmniZK"
+description = "Valida VM dialect for OmniZK"
 authors.workspace = true
 repository.workspace = true
 edition.workspace = true
@@ -11,7 +11,8 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-winter-math = { version = "0.6", default-features = false }
+ozk-ozk-dialect = { workspace = true }
+
 derive_more = { workspace = true }
 thiserror = { workspace = true }
 pliron = { workspace = true }
@@ -20,6 +21,5 @@ intertrait = { workspace = true }
 linkme = { workspace = true }
 paste = { workspace = true }
 inventory = { workspace = true }
-apint = "0.2.0"
 
 [dev-dependencies]
