--- a/crates/codegen/Cargo.toml
+++ b/crates/codegen/Cargo.toml
@@ -15,6 +15,7 @@ c2zk-ir = { workspace = true }
 c2zk-codegen-shared = { workspace = true }
 c2zk-codegen-tritonvm = { workspace = true }
 ozk-codegen-midenvm = { workspace = true }
+ozk-codegen-valida = { workspace = true }
 ozk-wasm-dialect = { workspace = true }
 pliron = { workspace = true }
 derive_more = { workspace = true }
