--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "crates/codegen-tritonvm",
   "crates/codegen-midenvm",
+  "crates/codegen-valida",
   "crates/ir",
   "crates/dialects/ozk",
   "crates/dialects/wasm",
@@ -45,6 +46,7 @@ c2zk-codegen = { path = "crates/codegen" }
 c2zk-codegen-shared = { path = "crates/codegen-shared" }
 c2zk-codegen-tritonvm = { path = "crates/codegen-tritonvm" }
 ozk-codegen-midenvm = { path = "crates/codegen-midenvm" }
+ozk-codegen-valida = { path = "crates/codegen-valida" }
 c2zk-stdlib = { path = "crates/stdlib" }
 c2zk-rust-wasm-tests-bundle1 = { path = "crates/rust-wasm-tests/bundle1" }
 c2zk-rust-wasm-tests-helper = { path = "crates/rust-wasm-tests-helper" }
