add valida.program and valida.func;

--- a/crates/dialects/valida/Cargo.toml
+++ b/crates/dialects/valida/Cargo.toml
@@ -21,5 +21,6 @@ intertrait = { workspace = true }
 linkme = { workspace = true }
 paste = { workspace = true }
 inventory = { workspace = true }
+indent = { workspace = true }
 
 [dev-dependencies]
