--- a/crates/dialects/wasm/Cargo.toml
+++ b/crates/dialects/wasm/Cargo.toml
@@ -11,6 +11,7 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
+ozk-ozk-dialect = { workspace = true }
 derive_more = { workspace = true }
 thiserror = { workspace = true }
 pliron = { workspace = true }
