start emit_prog for miden codegen;
add miden::ProcOp::get_callees_sym();

--- a/crates/codegen-midenvm/Cargo.toml
+++ b/crates/codegen-midenvm/Cargo.toml
@@ -24,6 +24,7 @@ winter-math = { version = "0.6", default-features = false }
 derive_more = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
+topological-sort = { workspace = true }
 
 [dev-dependencies]
 ozk-compiler = { workspace = true }
