--- a/crates/dialects/ozk/Cargo.toml
+++ b/crates/dialects/ozk/Cargo.toml
@@ -20,6 +20,6 @@ intertrait = { workspace = true }
 linkme = { workspace = true }
 paste = { workspace = true }
 inventory = { workspace = true }
-apint = "0.2.0"
+apint = { workspace = true }
 
 [dev-dependencies]
