--- a/crates/dialects/wasm/Cargo.toml
+++ b/crates/dialects/wasm/Cargo.toml
@@ -21,5 +21,6 @@ linkme = { workspace = true }
 indent = { workspace = true }
 paste = { workspace = true }
 inventory = { workspace = true }
+wasmparser = { workspace = true }
 
 [dev-dependencies]
