--- a/crates/codegen-midenvm/Cargo.toml
+++ b/crates/codegen-midenvm/Cargo.toml
@@ -37,5 +37,5 @@ c2zk-rust-wasm-tests-bundle1 = { workspace = true }
 pliron = { workspace = true }
 wat = { workspace = true }
 wasmprinter = { workspace = true }
-expect-test = "1.0.1"
+expect-test = { workspace = true }
 wasmtime = "7.0.0"
