draft GlobalsToMemPass up to adding functions to a module;

--- a/crates/ir-transform/Cargo.toml
+++ b/crates/ir-transform/Cargo.toml
@@ -13,6 +13,7 @@ categories.workspace = true
 [dependencies]
 c2zk-ir = { workspace = true }
 c2zk-frontend-shared = { workspace = true }
+ozk-frontend-wasm = { workspace = true }
 ozk-ozk-dialect = { workspace = true }
 ozk-wasm-dialect = { workspace = true }
 ozk-miden-dialect = { workspace = true }
